--- a/branches/wince/navit/projs/CodeBlocks/Gpx2Navit.cbp
+++ b/branches/wince/navit/projs/CodeBlocks/Gpx2Navit.cbp
@@ -44,7 +44,7 @@
 			<Add directory="%GTK_DIR%\lib\glib-2.0\include" />
 			<Add directory="%GTK_DIR%\include" />
 			<Add directory="Win32Extra" />
-			<Add directory="..\..\src\tools\gpx2navit_txt\src" />
+			<Add directory="..\..\navit\tools\gpx2navit_txt\src" />
 		</Compiler>
 		<Linker>
 			<Add library="user32" />
@@ -69,55 +69,55 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="Win32Extra\wordexp.h" />
-		<Unit filename="..\..\src\attr.h" />
-		<Unit filename="..\..\src\attr_def.h" />
-		<Unit filename="..\..\src\coord.h" />
-		<Unit filename="..\..\src\country.h" />
-		<Unit filename="..\..\src\debug.h" />
-		<Unit filename="..\..\src\file.h" />
-		<Unit filename="..\..\src\item.h" />
-		<Unit filename="..\..\src\map.h" />
-		<Unit filename="..\..\src\param.h" />
-		<Unit filename="..\..\src\plugin.h" />
-		<Unit filename="..\..\src\tools\gpx2navit_txt\src\Makefile.am" />
-		<Unit filename="..\..\src\tools\gpx2navit_txt\src\elementControl.c">
+		<Unit filename="..\..\navit\attr.h" />
+		<Unit filename="..\..\navit\attr_def.h" />
+		<Unit filename="..\..\navit\coord.h" />
+		<Unit filename="..\..\navit\country.h" />
+		<Unit filename="..\..\navit\debug.h" />
+		<Unit filename="..\..\navit\file.h" />
+		<Unit filename="..\..\navit\item.h" />
+		<Unit filename="..\..\navit\map.h" />
+		<Unit filename="..\..\navit\param.h" />
+		<Unit filename="..\..\navit\plugin.h" />
+		<Unit filename="..\..\navit\tools\gpx2navit_txt\src\Makefile.am" />
+		<Unit filename="..\..\navit\tools\gpx2navit_txt\src\elementControl.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\tools\gpx2navit_txt\src\emess.h" />
-		<Unit filename="..\..\src\tools\gpx2navit_txt\src\errorcode.h" />
-		<Unit filename="..\..\src\tools\gpx2navit_txt\src\geod_for.c">
+		<Unit filename="..\..\navit\tools\gpx2navit_txt\src\emess.h" />
+		<Unit filename="..\..\navit\tools\gpx2navit_txt\src\errorcode.h" />
+		<Unit filename="..\..\navit\tools\gpx2navit_txt\src\geod_for.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\tools\gpx2navit_txt\src\geod_inv.c">
+		<Unit filename="..\..\navit\tools\gpx2navit_txt\src\geod_inv.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\tools\gpx2navit_txt\src\geod_set.c">
+		<Unit filename="..\..\navit\tools\gpx2navit_txt\src\geod_set.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\tools\gpx2navit_txt\src\geodesic.h" />
-		<Unit filename="..\..\src\tools\gpx2navit_txt\src\gpx2navit_txt.h" />
-		<Unit filename="..\..\src\tools\gpx2navit_txt\src\main.c">
+		<Unit filename="..\..\navit\tools\gpx2navit_txt\src\geodesic.h" />
+		<Unit filename="..\..\navit\tools\gpx2navit_txt\src\gpx2navit_txt.h" />
+		<Unit filename="..\..\navit\tools\gpx2navit_txt\src\main.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\tools\gpx2navit_txt\src\misc.c">
+		<Unit filename="..\..\navit\tools\gpx2navit_txt\src\misc.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\tools\gpx2navit_txt\src\parser.c">
+		<Unit filename="..\..\navit\tools\gpx2navit_txt\src\parser.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\tools\gpx2navit_txt\src\setmeta.c">
+		<Unit filename="..\..\navit\tools\gpx2navit_txt\src\setmeta.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\tools\gpx2navit_txt\src\setpath.c">
+		<Unit filename="..\..\navit\tools\gpx2navit_txt\src\setpath.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\tools\gpx2navit_txt\src\setwpt.c">
+		<Unit filename="..\..\navit\tools\gpx2navit_txt\src\setwpt.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\tools\gpx2navit_txt\src\utils.c">
+		<Unit filename="..\..\navit\tools\gpx2navit_txt\src\utils.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\transform.h" />
+		<Unit filename="..\..\navit\transform.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
