--- a/branches/wince/navit/projs/CodeBlocks/Navit_gtk.cbp
+++ b/branches/wince/navit/projs/CodeBlocks/Navit_gtk.cbp
@@ -9,10 +9,10 @@
 			<Target title="Debug">
 				<Option output="bin\Debug\Navit_gtk" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj\Debug\" />
-				<Option external_deps="bin\Debug\libnavit.a;bin\Debug\libvehicle_file.la;bin\Debug\libdata_binfile.la;bin\Debug\libgtk_graphics.la;bin\Debug\libgtk_gui.la;bin\Debug\libwin32_gui.la" />
+				<Option external_deps="bin\Debug\libnavit.a;bin\Debug\libvehicle_file.la;bin\Debug\libdata_binfile.la;bin\Debug\libgtk_graphics.la;bin\Debug\libgtk_gui.la;bin\Debug\libwin32_gui.la;" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option use_console_runner="0" />
+				<Option parameters="Navit_gtk.xml" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
@@ -24,7 +24,6 @@
 					<Add library="bin\Debug\libvehicle_demo.la" />
 					<Add library="bin\Debug\libdata_poi_geodownload.la" />
 					<Add library="bin\Debug\libmdb.a" />
-					<Add library="bin\Debug\libdata_garmin.la" />
 					<Add library="bin\Debug\libspeech_speech_dispatcher.la" />
 					<Add library="bin\Debug\libdata_mg.la" />
 					<Add library="bin\Debug\libdata_textfile.la" />
@@ -44,6 +43,8 @@
 					<Add library="gmodule-2.0" />
 					<Add library="glib-2.0" />
 					<Add library="intl" />
+					<Add library="bin\Debug\libdata_garmin.la" />
+					<Add library="Win32Extra\libgarmin\libgarmin.a" />
 					<Add directory="bin\Debug" />
 					<Add directory="." />
 					<Add directory="Win32Extra\libgarmin" />
@@ -96,6 +97,7 @@
 			<Add option="-mms-bitfields" />
 			<Add option="-DMODULE=Navit" />
 			<Add option='-DPREFIX=\&quot;/usr/local\&quot;' />
+			<Add directory="Win32Extra" />
 			<Add directory="%GTK_DIR%\include" />
 			<Add directory="%GTK_DIR%\include\gtk-2.0" />
 			<Add directory="%GTK_DIR%\include\glib-2.0" />
@@ -104,13 +106,15 @@
 			<Add directory="%GTK_DIR%\include\cairo" />
 			<Add directory="%GTK_DIR%\include\pango-1.0" />
 			<Add directory="%GTK_DIR%\include\atk-1.0" />
-			<Add directory="..\..\src" />
-			<Add directory="Win32Extra" />
-			<Add directory="..\..\src\fib-1.1" />
+			<Add directory="..\..\navit" />
+			<Add directory="..\..\navit\fib-1.1" />
 			<Add directory="%GTK_DIR%\include\freetype2" />
+			<Add directory="%ZLIB_DIR%\include" />
+			<Add directory="%GTKGL%\include\gtkglext-1.0" />
 		</Compiler>
 		<Linker>
 			<Add directory="%GTK_DIR%\lib" />
+			<Add directory="..\..\..\libs\zlib-1.2.3\lib" />
 		</Linker>
 		<Unit filename="Win32Extra\navit_gtk.c">
 			<Option compilerVar="CC" />
@@ -118,7 +122,9 @@
 		<Extensions>
 			<code_completion />
 			<envvars />
-			<debugger />
+			<debugger>
+				<search_path add="C:\Programme\Development\libs\gtk+-2.12.9-bundle-20080402\bin" />
+			</debugger>
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
