--- a/branches/wince/navit/projs/CodeBlocks/Navit_win32.cbp
+++ b/branches/wince/navit/projs/CodeBlocks/Navit_win32.cbp
@@ -4,15 +4,15 @@
 	<Project>
 		<Option title="Navit_win32" />
 		<Option pch_mode="2" />
+		<Option default_target="DebugCeGcc" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
 				<Option output="bin\Debug\Navit_win32" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj\Debug\" />
-				<Option external_deps="bin\Debug\libnavit.a;bin\Debug\libvehicle_file.la;bin\Debug\libdata_binfile.la;bin\Debug\libgtk_graphics.la;bin\Debug\libgtk_gui.la;bin\Debug\libwin32_gui.la" />
+				<Option external_deps="bin\Debug\libnavit.a;bin\Debug\libvehicle_file.la;bin\Debug\libdata_binfile.la;bin\Debug\libgtk_graphics.la;bin\Debug\libgtk_gui.la;bin\Debug\libwin32_gui.la;" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
@@ -22,7 +22,6 @@
 					<Add library="bin\Debug\libvehicle_demo.la" />
 					<Add library="bin\Debug\libdata_poi_geodownload.la" />
 					<Add library="bin\Debug\libmdb.a" />
-					<Add library="bin\Debug\libdata_garmin.la" />
 					<Add library="bin\Debug\libspeech_speech_dispatcher.la" />
 					<Add library="bin\Debug\libdata_mg.la" />
 					<Add library="bin\Debug\libdata_textfile.la" />
@@ -38,9 +37,13 @@
 					<Add library="gmodule-2.0" />
 					<Add library="glib-2.0" />
 					<Add library="intl" />
+					<Add library="comctl32" />
+					<Add library="bin\Debug\libdata_garmin.la" />
+					<Add library="Win32Extra\libgarmin\libgarmin.a" />
 					<Add directory="bin\Debug" />
 					<Add directory="." />
 					<Add directory="Win32Extra\libgarmin" />
+					<Add directory="..\..\..\libs\zlib-1.2.3\lib" />
 				</Linker>
 			</Target>
 			<Target title="Release">
@@ -49,20 +52,17 @@
 				<Option external_deps="bin\Release\libnavit.a;bin\Release\libvehicle_file.la;bin\Release\libdata_binfile.la;bin\Release\libgtk_graphics.la;bin\Release\libgtk_gui.la;bin\Release\libwin32_gui.la" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-O2" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add option="-Wl,-Map,navit_release.map" />
 					<Add library="bin\Release\libvehicle_file.la" />
 					<Add library="bin\Release\libdata_binfile.la" />
-					<Add library="bin\Release\libgtk_graphics.la" />
 					<Add library="bin\Release\libvehicle_demo.la" />
-					<Add library="bin\Release\libgtk_gui.la" />
 					<Add library="bin\Release\libdata_poi_geodownload.la" />
 					<Add library="bin\Release\libmdb.a" />
-					<Add library="bin\Release\libdata_garmin.la" />
 					<Add library="bin\Release\libspeech_speech_dispatcher.la" />
 					<Add library="bin\Release\libdata_mg.la" />
 					<Add library="bin\Release\libdata_textfile.la" />
@@ -78,8 +78,62 @@
 					<Add library="gmodule-2.0" />
 					<Add library="glib-2.0" />
 					<Add library="intl" />
+					<Add library="comctl32" />
+					<Add library="bin\Debug\libdata_garmin.la" />
+					<Add library="Win32Extra\libgarmin\libgarmin.a" />
 					<Add directory="." />
 					<Add directory="Win32Extra\libgarmin" />
+					<Add directory="..\..\..\libs\zlib-1.2.3\lib" />
+				</Linker>
+			</Target>
+			<Target title="DebugCeGcc">
+				<Option output="bin\DebugCeGcc\Navit_win32" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj\DebugCeGcc\" />
+				<Option external_deps="bin\DebugCeGcc\libnavit.a;bin\DebugCeGcc\libvehicle_file.la;bin\DebugCeGcc\libdata_binfile.la;bin\DebugCeGcc\libwin32_gui.la;bin\DebugCeGcc\libvehicle_demo.la;" />
+				<Option type="1" />
+				<Option compiler="cegcc_compiler" />
+				<Option use_console_runner="0" />
+				<Option host_application="Navit_win32.exe" />
+				<Option projectCompilerOptionsRelation="1" />
+				<Option projectLinkerOptionsRelation="1" />
+				<Option projectIncludeDirsRelation="1" />
+				<Option projectResourceIncludeDirsRelation="1" />
+				<Option projectLibDirsRelation="1" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="-DMODULE=Navit" />
+					<Add directory="..\..\navit" />
+					<Add directory="c:\MinGW\opt\cegcc\arm-wince-cegcc\include\glib-2.0" />
+					<Add directory="C:\MinGW\opt\cegcc\arm-wince-cegcc\lib\glib-2.0\include" />
+				</Compiler>
+				<ResourceCompiler>
+					<Add directory="win32gui\resources" />
+				</ResourceCompiler>
+				<Linker>
+					<Add library="bin\DebugCeGcc\libvehicle_file.la" />
+					<Add library="bin\DebugCeGcc\libvehicle_demo.la" />
+					<Add library="bin\DebugCeGcc\libdata_binfile.la" />
+					<Add library="bin\DebugCeGcc\libdata_mg.la" />
+					<Add library="bin\DebugCeGcc\libdata_textfile.la" />
+					<Add library="bin\DebugCeGcc\libwin32_gui.la" />
+					<Add library="bin\DebugCeGcc\libnavit.a" />
+					<Add library="bin\DebugCeGcc\libfib.a" />
+					<Add library="ole32" />
+					<Add library="gdi32" />
+					<Add library="z" />
+					<Add library="C:\MinGW\opt\cegcc\arm-wince-cegcc\lib\libgobject-2.0.a" />
+					<Add library="C:\MinGW\opt\cegcc\arm-wince-cegcc\lib\libgmodule-2.0.a" />
+					<Add library="C:\MinGW\opt\cegcc\arm-wince-cegcc\lib\libglib-2.0.a" />
+					<Add library="commctrl" />
+					<Add library="intl" />
+					<Add library="iconv" />
+					<Add library="bin\DebugCeGcc\libdata_poi_geodownload.la" />
+					<Add library="bin\DebugCeGcc\libmdb.a" />
+					<Add directory="bin\Debug" />
+					<Add directory="." />
+					<Add directory="Win32Extra\libgarmin" />
+					<Add directory="C:\Program Files\Microsoft SDKs\Windows\v6.0A\Lib" />
+					<Add directory="C:\MinGW\opt\cegcc\arm-wince-cegcc\lib" />
 				</Linker>
 			</Target>
 		</Build>
@@ -96,9 +150,9 @@
 			<Add directory="%GTK_DIR%\include\cairo" />
 			<Add directory="%GTK_DIR%\include\pango-1.0" />
 			<Add directory="%GTK_DIR%\include\atk-1.0" />
-			<Add directory="..\..\src" />
+			<Add directory="..\..\navit" />
 			<Add directory="Win32Extra" />
-			<Add directory="..\..\src\fib-1.1" />
+			<Add directory="..\..\navit\fib-1.1" />
 			<Add directory="%GTK_DIR%\include\freetype2" />
 		</Compiler>
 		<ResourceCompiler>
@@ -117,7 +171,10 @@
 		<Extensions>
 			<code_completion />
 			<envvars />
-			<debugger />
+			<debugger>
+				<search_path add="C:\MinGW\opt\cegcc\arm-wince-cegcc\lib" />
+				<search_path add="..\..\navit" />
+			</debugger>
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
