--- a/branches/wince/navit/projs/CodeBlocks/binfile.cbp
+++ b/branches/wince/navit/projs/CodeBlocks/binfile.cbp
@@ -37,16 +37,37 @@
 					<Add directory="bin\Release" />
 				</Linker>
 			</Target>
+			<Target title="DebugCeGcc">
+				<Option output=".\bin\DebugCeGcc\libdata_binfile.la" prefix_auto="1" extension_auto="0" />
+				<Option working_dir="" />
+				<Option object_output=".\obj\DebugCeGcc\" />
+				<Option type="2" />
+				<Option compiler="cegcc_compiler" />
+				<Option createDefFile="1" />
+				<Option projectIncludeDirsRelation="1" />
+				<Compiler>
+					<Add option="-g" />
+					<Add directory="..\..\navit" />
+					<Add directory="Win32Extra" />
+					<Add directory="c:\MinGW\opt\cegcc\arm-wince-cegcc\include\glib-2.0\" />
+					<Add directory="C:\MinGW\opt\cegcc\arm-wince-cegcc\lib\glib-2.0\include" />
+				</Compiler>
+				<Linker>
+					<Add directory="%GTK_DIR%\lib" />
+					<Add directory="bin\Debug" />
+				</Linker>
+			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-mms-bitfields" />
 			<Add option="-DBUILD_DLL" />
 			<Add option="-DMODULE=data_binfile" />
+			<Add option="-D__BYTE_ORDER=__LITTLE_ENDIAN" />
 			<Add directory="%GTK_DIR%\include\glib-2.0" />
 			<Add directory="%GTK_DIR%\lib\glib-2.0\include" />
 			<Add directory="Win32Extra" />
-			<Add directory="..\..\src" />
+			<Add directory="..\..\navit" />
 		</Compiler>
 		<Linker>
 			<Add library="NavitCommonLib" />
@@ -56,7 +77,7 @@
 			<Add library="iconv" />
 			<Add directory="%GTK_DIR%\lib" />
 		</Linker>
-		<Unit filename="..\..\src\data\binfile\binfile.c">
+		<Unit filename="..\..\navit\data\binfile\binfile.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
