--- a/branches/wince/navit/projs/CodeBlocks/data_garmin.cbp
+++ b/branches/wince/navit/projs/CodeBlocks/data_garmin.cbp
@@ -46,7 +46,7 @@
 			<Add directory="%GTK_DIR%\include\glib-2.0" />
 			<Add directory="%GTK_DIR%\lib\glib-2.0\include" />
 			<Add directory="Win32Extra" />
-			<Add directory="..\..\src" />
+			<Add directory="..\..\navit" />
 			<Add directory="." />
 			<Add directory="Win32Extra\libgarmin" />
 		</Compiler>
@@ -58,13 +58,13 @@
 			<Add library="iconv" />
 			<Add directory="%GTK_DIR%\lib" />
 		</Linker>
-		<Unit filename="..\..\src\data\garmin\gar2navit.c">
+		<Unit filename="..\..\navit\data\garmin\gar2navit.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\garmin\garmin.c">
+		<Unit filename="..\..\navit\data\garmin\garmin.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\garmin\garmin.h" />
+		<Unit filename="..\..\navit\data\garmin\garmin.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
