--- a/branches/wince/navit/projs/CodeBlocks/data_mg.cbp
+++ b/branches/wince/navit/projs/CodeBlocks/data_mg.cbp
@@ -37,6 +37,26 @@
 					<Add directory="bin\Release" />
 				</Linker>
 			</Target>
+			<Target title="DebugCeGcc">
+				<Option output=".\bin\DebugCeGcc\libdata_mg.la" prefix_auto="1" extension_auto="0" />
+				<Option working_dir="" />
+				<Option object_output=".\objDebugCeGcc\" />
+				<Option type="2" />
+				<Option compiler="cegcc_compiler" />
+				<Option createDefFile="1" />
+				<Option projectIncludeDirsRelation="1" />
+				<Compiler>
+					<Add option="-g" />
+					<Add directory="..\..\navit" />
+					<Add directory="Win32Extra" />
+					<Add directory="C:\MinGW\opt\cegcc\arm-wince-cegcc\include\glib-2.0" />
+					<Add directory="C:\MinGW\opt\cegcc\arm-wince-cegcc\lib\glib-2.0\include" />
+				</Compiler>
+				<Linker>
+					<Add directory="%GTK_DIR%\lib" />
+					<Add directory="bin\Debug" />
+				</Linker>
+			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
@@ -45,7 +65,7 @@
 			<Add option="-DMODULE=data_mg" />
 			<Add directory="%GTK_DIR%\include\glib-2.0" />
 			<Add directory="%GTK_DIR%\lib\glib-2.0\include" />
-			<Add directory="..\..\src" />
+			<Add directory="..\..\navit" />
 			<Add directory="Win32Extra" />
 		</Compiler>
 		<Linker>
@@ -56,23 +76,23 @@
 			<Add library="iconv" />
 			<Add directory="%GTK_DIR%\lib" />
 		</Linker>
-		<Unit filename="..\..\src\data\mg\block.c">
+		<Unit filename="..\..\navit\data\mg\block.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\mg\map.c">
+		<Unit filename="..\..\navit\data\mg\map.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\mg\mg.h" />
-		<Unit filename="..\..\src\data\mg\poly.c">
+		<Unit filename="..\..\navit\data\mg\mg.h" />
+		<Unit filename="..\..\navit\data\mg\poly.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\mg\street.c">
+		<Unit filename="..\..\navit\data\mg\street.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\mg\town.c">
+		<Unit filename="..\..\navit\data\mg\town.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\mg\tree.c">
+		<Unit filename="..\..\navit\data\mg\tree.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
