--- a/branches/wince/navit/projs/CodeBlocks/data_poi_geodownload.cbp
+++ b/branches/wince/navit/projs/CodeBlocks/data_poi_geodownload.cbp
@@ -37,6 +37,21 @@
 					<Add directory="bin\Release" />
 				</Linker>
 			</Target>
+			<Target title="DebugCeGcc">
+				<Option output=".\bin\DebugCeGcc\libdata_poi_geodownload.la" prefix_auto="1" extension_auto="0" />
+				<Option working_dir="" />
+				<Option object_output=".\obj\DebugCeGcc\" />
+				<Option type="2" />
+				<Option compiler="cegcc_compiler" />
+				<Option createDefFile="1" />
+				<Compiler>
+					<Add option="-g" />
+				</Compiler>
+				<Linker>
+					<Add directory="%GTK_DIR%\lib" />
+					<Add directory="bin\Debug" />
+				</Linker>
+			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
@@ -46,8 +61,8 @@
 			<Add directory="%GTK_DIR%\include\glib-2.0" />
 			<Add directory="%GTK_DIR%\lib\glib-2.0\include" />
 			<Add directory="Win32Extra" />
-			<Add directory="..\..\src" />
-			<Add directory="..\..\src\data\poi_geodownload\libmdb\include" />
+			<Add directory="..\..\navit" />
+			<Add directory="..\..\navit\data\poi_geodownload\libmdb\include" />
 		</Compiler>
 		<Linker>
 			<Add library="glib-2.0" />
@@ -56,7 +71,7 @@
 			<Add library="iconv" />
 			<Add directory="%GTK_DIR%\lib" />
 		</Linker>
-		<Unit filename="..\..\src\data\poi_geodownload\poi_geodownload.c">
+		<Unit filename="..\..\navit\data\poi_geodownload\poi_geodownload.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
