--- a/branches/wince/navit/projs/CodeBlocks/fib-1.1.cbp
+++ b/branches/wince/navit/projs/CodeBlocks/fib-1.1.cbp
@@ -32,16 +32,28 @@
 					<Add option="-s" />
 				</Linker>
 			</Target>
+			<Target title="DebugCeGcc">
+				<Option output=".\bin\DebugCeGcc\libfib.a" prefix_auto="0" extension_auto="0" />
+				<Option working_dir="" />
+				<Option object_output="obj\DebugCeGcc\" />
+				<Option type="2" />
+				<Option compiler="cegcc_compiler" />
+				<Option createDefFile="1" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="-I." />
+				</Compiler>
+			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add directory="..\..\src\fib-1.1" />
+			<Add directory="..\..\navit\fib-1.1" />
 		</Compiler>
-		<Unit filename="..\..\src\fib-1.1\fib.c">
+		<Unit filename="..\..\navit\fib-1.1\fib.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\fib-1.1\fib.h" />
-		<Unit filename="..\..\src\fib-1.1\fibpriv.h" />
+		<Unit filename="..\..\navit\fib-1.1\fib.h" />
+		<Unit filename="..\..\navit\fib-1.1\fibpriv.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
