--- a/branches/wince/navit/projs/CodeBlocks/gtk_gl_ext.cbp
+++ b/branches/wince/navit/projs/CodeBlocks/gtk_gl_ext.cbp
@@ -51,7 +51,7 @@
 			<Add directory="%GTK_DIR%\include\cairo" />
 			<Add directory="%GTK_DIR%\include\pango-1.0" />
 			<Add directory="%GTK_DIR%\include\atk-1.0" />
-			<Add directory="..\..\src" />
+			<Add directory="..\..\navit" />
 			<Add directory="Win32Extra" />
 			<Add directory="%GTK_DIR%\include\freetype2" />
 			<Add directory="%GTK_DIR%\include\gtkglext-1.0" />
@@ -64,7 +64,7 @@
 			<Add library="iconv" />
 			<Add directory="%GTK_DIR%\lib" />
 		</Linker>
-		<Unit filename="..\..\src\graphics\gtk_gl_ext\graphics_gtk_gl_ext.c">
+		<Unit filename="..\..\navit\graphics\gtk_gl_ext\graphics_gtk_gl_ext.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
