--- a/branches/wince/navit/projs/CodeBlocks/gtk_graphics.cbp
+++ b/branches/wince/navit/projs/CodeBlocks/gtk_graphics.cbp
@@ -51,7 +51,7 @@
 			<Add directory="%GTK_DIR%\include\cairo" />
 			<Add directory="%GTK_DIR%\include\pango-1.0" />
 			<Add directory="%GTK_DIR%\include\atk-1.0" />
-			<Add directory="..\..\src" />
+			<Add directory="..\..\navit" />
 			<Add directory="Win32Extra" />
 			<Add directory="%GTK_DIR%\include\freetype2" />
 		</Compiler>
@@ -63,7 +63,7 @@
 			<Add library="iconv" />
 			<Add directory="%GTK_DIR%\lib" />
 		</Linker>
-		<Unit filename="..\..\src\graphics\gtk_drawing_area\graphics_gtk_drawing_area.c">
+		<Unit filename="..\..\navit\graphics\gtk_drawing_area\graphics_gtk_drawing_area.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
