--- a/branches/wince/navit/projs/CodeBlocks/mdb.cbp
+++ b/branches/wince/navit/projs/CodeBlocks/mdb.cbp
@@ -32,69 +32,81 @@
 					<Add option="-s" />
 				</Linker>
 			</Target>
+			<Target title="DebugCeGcc">
+				<Option output=".\bin\DebugCeGcc\libmdb.a" prefix_auto="0" extension_auto="0" />
+				<Option working_dir="" />
+				<Option object_output="obj\DebugCeGcc\" />
+				<Option type="2" />
+				<Option compiler="cegcc_compiler" />
+				<Option createDefFile="1" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="-I." />
+				</Compiler>
+			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-mms-bitfields" />
-			<Add directory="..\..\src\data\poi_geodownload\libmdb\include" />
+			<Add directory="..\..\navit\data\poi_geodownload\libmdb\include" />
 			<Add directory="%GTK_DIR%\include\glib-2.0" />
 			<Add directory="%GTK_DIR%\lib\glib-2.0\include" />
 		</Compiler>
-		<Unit filename="..\..\src\data\poi_geodownload\libmdb\backend.c">
+		<Unit filename="..\..\navit\data\poi_geodownload\libmdb\backend.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\poi_geodownload\libmdb\catalog.c">
+		<Unit filename="..\..\navit\data\poi_geodownload\libmdb\catalog.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\poi_geodownload\libmdb\data.c">
+		<Unit filename="..\..\navit\data\poi_geodownload\libmdb\data.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\poi_geodownload\libmdb\dump.c">
+		<Unit filename="..\..\navit\data\poi_geodownload\libmdb\dump.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\poi_geodownload\libmdb\file.c">
+		<Unit filename="..\..\navit\data\poi_geodownload\libmdb\file.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\poi_geodownload\libmdb\iconv.c">
+		<Unit filename="..\..\navit\data\poi_geodownload\libmdb\iconv.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\poi_geodownload\libmdb\index.c">
+		<Unit filename="..\..\navit\data\poi_geodownload\libmdb\index.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\poi_geodownload\libmdb\kkd.c">
+		<Unit filename="..\..\navit\data\poi_geodownload\libmdb\kkd.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\poi_geodownload\libmdb\like.c">
+		<Unit filename="..\..\navit\data\poi_geodownload\libmdb\like.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\poi_geodownload\libmdb\map.c">
+		<Unit filename="..\..\navit\data\poi_geodownload\libmdb\map.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\poi_geodownload\libmdb\mem.c">
+		<Unit filename="..\..\navit\data\poi_geodownload\libmdb\mem.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\poi_geodownload\libmdb\money.c">
+		<Unit filename="..\..\navit\data\poi_geodownload\libmdb\money.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\poi_geodownload\libmdb\options.c">
+		<Unit filename="..\..\navit\data\poi_geodownload\libmdb\options.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\poi_geodownload\libmdb\props.c">
+		<Unit filename="..\..\navit\data\poi_geodownload\libmdb\props.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\poi_geodownload\libmdb\sargs.c">
+		<Unit filename="..\..\navit\data\poi_geodownload\libmdb\sargs.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\poi_geodownload\libmdb\stats.c">
+		<Unit filename="..\..\navit\data\poi_geodownload\libmdb\stats.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\poi_geodownload\libmdb\table.c">
+		<Unit filename="..\..\navit\data\poi_geodownload\libmdb\table.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\poi_geodownload\libmdb\worktable.c">
+		<Unit filename="..\..\navit\data\poi_geodownload\libmdb\worktable.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="..\..\src\data\poi_geodownload\libmdb\write.c">
+		<Unit filename="..\..\navit\data\poi_geodownload\libmdb\write.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
