--- a/branches/wince/navit/projs/CodeBlocks/vehicle_file.cbp
+++ b/branches/wince/navit/projs/CodeBlocks/vehicle_file.cbp
@@ -37,6 +37,27 @@
 					<Add directory="bin\Release" />
 				</Linker>
 			</Target>
+			<Target title="DebugCeGcc">
+				<Option output=".\bin\DebugCeGcc\libvehicle_file.la" prefix_auto="1" extension_auto="0" />
+				<Option working_dir="" />
+				<Option object_output=".\obj\DebugCeGcc\" />
+				<Option type="2" />
+				<Option compiler="cegcc_compiler" />
+				<Option createDefFile="1" />
+				<Option projectIncludeDirsRelation="1" />
+				<Compiler>
+					<Add option="-g" />
+					<Add directory="..\..\..\libs\gtk+-2.12.9-bundle-20080402\include\glib-2.0" />
+					<Add directory="..\..\..\libs\gtk+-2.12.9-bundle-20080402\include" />
+					<Add directory="..\..\..\libs\gtk+-2.12.9-bundle-20080402\lib\glib-2.0\include" />
+					<Add directory="..\..\navit" />
+					<Add directory="Win32Extra" />
+				</Compiler>
+				<Linker>
+					<Add directory="%GTK_DIR%\lib" />
+					<Add directory="bin\Debug" />
+				</Linker>
+			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
@@ -46,7 +67,7 @@
 			<Add directory="%GTK_DIR%\include\glib-2.0" />
 			<Add directory="%GTK_DIR%\lib\glib-2.0\include" />
 			<Add directory="Win32Extra" />
-			<Add directory="..\..\src" />
+			<Add directory="..\..\navit" />
 		</Compiler>
 		<Linker>
 			<Add library="glib-2.0" />
@@ -55,7 +76,7 @@
 			<Add library="iconv" />
 			<Add directory="%GTK_DIR%\lib" />
 		</Linker>
-		<Unit filename="..\..\src\vehicle\file\vehicle_file.c">
+		<Unit filename="..\..\navit\vehicle\file\vehicle_file.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
