--- a/branches/wince/navit/projs/CodeBlocks/win32_gui.cbp
+++ b/branches/wince/navit/projs/CodeBlocks/win32_gui.cbp
@@ -32,14 +32,32 @@
 					<Add option="-s" />
 				</Linker>
 			</Target>
+			<Target title="DebugCeGcc">
+				<Option output=".\bin\DebugCeGcc\libwin32_gui.la" prefix_auto="0" extension_auto="0" />
+				<Option working_dir="" />
+				<Option object_output="obj\DebugCeGcc\" />
+				<Option type="2" />
+				<Option compiler="cegcc_compiler" />
+				<Option createDefFile="1" />
+				<Option projectIncludeDirsRelation="1" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="-I." />
+					<Add directory="..\..\navit" />
+					<Add directory="Win32Extra" />
+					<Add directory="c:\MinGW\opt\cegcc\arm-wince-cegcc\include\glib-2.0\" />
+					<Add directory="C:\MinGW\opt\cegcc\arm-wince-cegcc\lib\glib-2.0\include" />
+				</Compiler>
+			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-mms-bitfields" />
 			<Add option="-DMODULE=win32_gui" />
+			<Add option="-D_WIN32_IE=0x400" />
 			<Add directory="%GTK_DIR%\include\glib-2.0" />
 			<Add directory="%GTK_DIR%\lib\glib-2.0\include" />
-			<Add directory="..\..\src" />
+			<Add directory="..\..\navit" />
 			<Add directory="Win32Extra" />
 		</Compiler>
 		<Unit filename="win32gui\win32_graphics.c">
@@ -49,6 +67,9 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="win32gui\win32_gui.h" />
+		<Unit filename="win32gui\win32_gui_destination.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="win32gui\xpm2bmp.c">
 			<Option compilerVar="CC" />
 		</Unit>
