--- a/branches/iphone/po/de.po.in
+++ b/branches/iphone/po/de.po.in
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: navit 0.2.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-06-26 07:37+0200\n"
-"PO-Revision-Date: 2009-06-26 11:54+0000\n"
-"Last-Translator: Keruskerfuerst <armin_mohring@web.de>\n"
+"POT-Creation-Date: 2009-07-02 20:42+0200\n"
+"PO-Revision-Date: 2009-07-19 19:59+0000\n"
+"Last-Translator: Lukas Bögelein <Unknown>\n"
 "Language-Team: Martin Schaller <martin-s@sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2009-07-02 18:08+0000\n"
+"X-Launchpad-Export-Date: 2009-08-05 05:52+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 "X-Report-Errors: https://translations.launchpad.net/navit/trunk/+pots/navit\n"
 
@@ -98,7 +98,7 @@ msgstr "in %d m"
 #: ../navit/navigation.c:320
 #, c-format
 msgid "%d meters"
-msgstr "%d Metern"
+msgstr "%d Meter"
 
 #: ../navit/navigation.c:322
 #, c-format
@@ -185,12 +185,12 @@ msgstr "leicht "
 #. TRANSLATORS: Don't forget the ending space
 #: ../navit/navigation.c:1389
 msgid "strongly "
-msgstr "stark "
+msgstr "scharf "
 
 #. TRANSLATORS: Don't forget the ending space
 #: ../navit/navigation.c:1392
 msgid "really strongly "
-msgstr "Übersetz: "
+msgstr "scharf "
 
 #. TRANSLATORS: Don't forget the ending space
 #: ../navit/navigation.c:1396
@@ -1827,7 +1827,7 @@ msgstr "Zurück"
 #: ../navit/gui/internal/gui_internal.c:1917
 #: ../navit/gui/internal/gui_internal.c:2134
 msgid "POIs"
-msgstr "Interressante Kartenpunkte"
+msgstr "Interessante Kartenpunkte"
 
 #: ../navit/gui/internal/gui_internal.c:2082
 msgid "Streets"
@@ -1949,7 +1949,7 @@ msgstr "Werkzeuge"
 
 #: ../navit/gui/internal/gui_internal.c:3392
 msgid "Message"
-msgstr ""
+msgstr "Benachrichtigung"
 
 #: ../navit/gui/internal/gui_internal.c:4511
 #: ../navit/gui/internal/gui_internal.c:4659
