Iphone dirty patch: Hacking build when plugins are disabled + NO_DEBUG use
git-svn-id: svn://svn.code.sf.net/p/navit/code@2510 ffa7fe5e-494d-0410-b361-a75ebd5db220

--- a/branches/iphone/configure.in
+++ b/branches/iphone/configure.in
@@ -755,7 +755,7 @@ AM_CONDITIONAL(VEHICLE_IPHONE, test "x${vehicle_iphone}" = "xyes")
 if test "x${vehicle_iphone}" = "xyes"
 then
 	IPHONE_LIBS=-Wl,-framework,CoreLocation
-	NAVIT_CFLAGS="$NAVIT_CFLAGS -DCACHE_SIZE=1048576"
+	NAVIT_CFLAGS="$NAVIT_CFLAGS -DNO_DEBUG -DCACHE_SIZE=1048576"
 fi
 AC_SUBST(IPHONE_CFLAGS)
 AC_SUBST(IPHONE_LIBS)
